# crinkle

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: codeql.yml  lint-and-format.yaml  release.yaml  scorecard.yml  tests.yaml
crinkle/: __init__.py  context.py  flow.py  processor.py
src/: context.py  flow.py  processor.py
tests/: test_context.py  test_flow.py
