[tool.poetry]
name = "crinkle"
version = "0.1.0"
description = ""
authors = ["Miguel Teixeira <miguel.teixeira@poli.ufrj.br>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.2"
ruff = "^0.1.7"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
