[tool.poetry]
name = "crinkle"
version = "0.1.0"
description = ""
authors = ["Miguel Teixeira <miguel.teixeira@poli.ufrj.br>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "crinkle" }
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
coverage-badge = "^1.1.0"
pytest-cov = "^4.1.0"
ruff = "^0.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
